# toys-store-backend

./: .ebextensions  .gitignore  Dockerfile  build.sh  manage.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: main.yml
toys-store/: asgi.py  settings.py  urls.py  wsgi.py
