[tool.poetry]
name = "toys-store"
version = "0.1.0"
description = ""
authors = ["sayad-mallllek <bob@khalilelzein.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
django-jazzmin = "^2.6.0"
urllib3 = "1.26.6"
gunicorn = "^21.2.0"
poetry = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
